--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <canvas id="myChart" ></canvas>
         <div id="totalBox">
           <h3>Total: <span id="totalReais">R$ 0,00</span></h3>
-          <script src="./java/java.js"></script>
+          <script src="./java.js"></script>
         </div>      
     </div>
     <div class="about-us">
