--- a/account.html
+++ b/account.html
@@ -8,6 +8,11 @@
     <title>ConsuWatts | Conta</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="icon" href="./logoicon.png">
+    <style>
+      .black-text {
+        color: black;
+      }
+    </style>
   </head>
   <body>
     <header>
@@ -29,17 +34,11 @@
                     <img src="./perfil.png" title="Loop Nerd" alt="perfil">
                 </div> 
                 <div class="info-profile">
-                    <p id="n-profile"> ID: 1640273 </p>
-                    <p> Nome: </p>
-                    <p> Email: </p>
-                    <p> Contato: </p>
-                    <p> Endereço: </p>
-                </div>
-                <div class="user-info">
-                        <p id="user-name"> Gabriel Tinôco </p>  
-                        <p id="user-email"> luizgabrieltinoco10@gmail.com</p>
-                        <p id="user-info">(92) 99223-8622</p>
-                        <p id="user-info2">Rua 5, Casa 10 - Cidade Nova</p>
+                    <p id="n-profile"> ID: 22401276 </p>
+                    <p> Nome: <span class="black-text">Gabriel Tinôco</span> </p>
+                    <p> Email: <span class="black-text">consuwatts@gmail.com</span></p>
+                    <p> Contato: <span class="black-text">(92) 99214-5123</span></p>
+                    <p> Endereço: <span class="black-text">Rua 5, Casa 10 - Centro</span></p>
                 </div>
             </div>
         </figure>
