--- a/help.html
+++ b/help.html
@@ -43,12 +43,10 @@
         <input type="submit" id="submit" value="Enviar"></input>
         </form>
   
-        <script src="./java/help.js"></script>
+        <script src="./help.js"></script>
     </div>
-    <div class="dire">
         <footer>
           <p>&copy; 2024 ConsuWatts. Todos os direitos reservados.</p>
         </footer>
-    </div>
   </body>
 </html>
