--- a/calendar.html
+++ b/calendar.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="">
     <meta name="Tinôco" content="">
     <title>ConsuWatts | Calendário</title>
-    <link rel="stylesheet" href="./style.css"
+    <link rel="stylesheet" href="./style.css">
     <link rel="icon" href="./logoicon.png"> 
 </head>
 <body>
