--- a/help.html
+++ b/help.html
@@ -45,7 +45,7 @@
   
         <script src="./help.js"></script>
     </div>
-        <footer>
+        <footer id="hfooter">
           <p>&copy; 2024 ConsuWatts. Todos os direitos reservados.</p>
         </footer>
   </body>
