--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
   <head>
       <meta charset="utf-8">
-      <meta name="description" content="">
-	    <meta name="keywords" content="">
+      <meta name="viewport" content="">
 	    <meta name="Tinôco" content="">
       <title>ConsuWatts | Bem-Vindo!</title>
       <link rel="stylesheet" href="./style.css">
